# ongaku

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  LICENSE  README.md  meson.build
app/: meson.build
app/include/: callbacks.h  constants.h  consts.h  ioutil.h
app/src/: callbacks.c  client.c  ioutil.c  server.c
app/tests/: ioutil_test.c  meson.build
audio/: meson.build
audio/include/: audio.h
audio/src/: audio.c
audio/src/platform/: portaudio.c  pulseaudio.c
core/: meson.build
core/include/: log.h  protocol.h  ringbuf.h  socket.h
core/src/: log.c  protocol.c  ringbuf.c  socket.c
core/tests/: meson.build  pool_test.c  protocol_test.c  ringbuf_test.c
crypto/: meson.build
crypto/include/crypto/: crypto.h  plaintext.h  sodium.h
crypto/src/: plaintext.c  sodium.c
crypto/tests/: meson.build  test_suites.c
include/: audio.h  callbacks.h  log.h  pool.h  protocol.h  ringbuf.h  util.h
src/: audio.c  audio.h  callbacks.c  callbacks.h  client.c  log.c  log.h  pool.c  pool.h  protocol.c  protocol.h  pulse.c  ringbuf.c  ringbuf.h  server.c  socket.c  socket.h  util.h
src/platform/: portaudio.c  pulseaudio.c
tests/: test_ringbuf.c
util/: meson.build
util/include/: util.h
