test(
    'core/pool test',
    executable(
        'test_pool',
        sources: ['../src/pool.c', 'pool_test.c'],
        include_directories: core_includes,
    ),
)

test(
    'core/ringbuf test',
    executable(
        'test_ringbuf',
        sources: ['../src/ringbuf.c', 'ringbuf_test.c'],
        include_directories: core_includes,
    ),
)