test(
    'core/pool test',
    executable(
        'pool_test',
        sources: ['../src/pool.c', 'pool_test.c'],
        include_directories: core_includes,
    ),
)

test(
    'core/ringbuf test',
    executable(
        'ringbuf_test',
        sources: ['../src/ringbuf.c', 'ringbuf_test.c'],
        include_directories: core_includes,
    ),
)

test(
    'core/protocol test',
    executable(
        'protocol_test',
        sources: ['../src/protocol.c', 'protocol_test.c'],
        include_directories: core_includes,
    ),
)